WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235428
GraphicsContextStateChange logging doesn't dump shadow color
https://bugs.webkit.org/show_bug.cgi?id=235428
Summary
GraphicsContextStateChange logging doesn't dump shadow color
Tim Horton
Reported
2022-01-20 18:05:48 PST
GraphicsContextStateChange logging doesn't dump shadow color
Attachments
Patch
(1.43 KB, patch)
2022-01-20 18:06 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(2.45 KB, patch)
2022-01-21 10:49 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-01-20 18:06:25 PST
Created
attachment 449628
[details]
Patch
Tim Horton
Comment 2
2022-01-20 18:06:52 PST
I expect this will break some tests, I will rebaseline them, and that will be my test :) Just waiting for EWS.
Tim Horton
Comment 3
2022-01-21 10:49:22 PST
Created
attachment 449671
[details]
Patch
EWS
Comment 4
2022-01-21 18:14:46 PST
Committed
r288395
(
246289@main
): <
https://commits.webkit.org/246289@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449671
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-01-21 18:15:18 PST
<
rdar://problem/87913085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug