GraphicsContextStateChange logging doesn't dump shadow color https://bugs.webkit.org/show_bug.cgi?id=235428

Reviewed by Wenson Hsieh.

* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContextStateChange::dump const):
Add shadowColor property to the things we dump on ShadowChange.



Canonical link: https://commits.webkit.org/246289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288395 268f45cc-cd09-0410-ab3c-d52691b4dbfc